Making a test change to changes

--- a/changes
+++ b/changes
@@ -1,3 +1,5 @@
+Testing git
+
 04/29 03 Eudora2Mbox.py
 	Improved attachment code so that if the attachment appeared
 	neither to be a Mac path or a DOS path, it prints and saves
